# suppa

./: .gitignore  Cargo.toml  LICENSE  README.md  annotations.md
README/: README-ja.md  TODO.md
example/: Rust.rs  annotations.json  annotations.md  annotations.toon  config.toml
src/: core.rs  main.rs  model.rs
src/core/: common.rs  config.rs  create_config.rs  create_markdown.rs  function.rs  search.rs
src/core/format/: json.rs  markdown.rs  mod.rs  toon.rs
src/tests/: markdown.rs  test.toml
