[package]
name = "suppa"
version = "0.1.0"
description = "CLI: Extract TODO-like annotations into Markdown"
edition = "2024"
authors = ["ikata"]
license = "MIT"
repository = "https://github.com/c0b23092db/suppa"

[[bin]]
name = "spp"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
toml = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0"
regex = "1.12"
clap = { version = "4.5", features = ["derive"] }
