[package]
name = "suppa"
version = "0.2.6"
description = "CLI: Extract TODO-like annotations into Markdown"
keywords = ["cli","productivity","annotation","todo","markdown"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
edition = "2024"
readme = "README.md"
authors = ["ikata"]
repository = "https://github.com/c0b23092db/suppa"

[[bin]]
name = "spp"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
toml = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
regex = "1.12"
clap = { version = "4.5", features = ["derive"] }
colored = "3"
